[gd_scene load_steps=31 format=3 uid="uid://dxbnl7qt63tg0"]

[ext_resource type="Shader" uid="uid://djxsvwyh2rqbm" path="res://shaders/SkyShader.gdshader" id="1_03owx"]
[ext_resource type="Script" uid="uid://c5tq6tgpx6d6j" path="res://scripts/WaterChain.gd" id="1_5vvyt"]
[ext_resource type="Script" uid="uid://bi6bhhsa3v5ag" path="res://scripts/WaveController.gd" id="1_c2ibq"]
[ext_resource type="AudioStream" uid="uid://ehdlicy1nsec" path="res://scripts/Get in the Water.mp3" id="2_j4qnp"]
[ext_resource type="Texture2D" uid="uid://xx10tvjqk1cl" path="res://White.png" id="2_wkp8b"]
[ext_resource type="Shader" uid="uid://dqxbnsjvuhace" path="res://shaders/BackWaves.gdshader" id="3_20pc6"]
[ext_resource type="Script" uid="uid://dvir7togo64v3" path="res://scripts/DockCam.gd" id="3_c6i3y"]
[ext_resource type="Shader" uid="uid://dvonxx7v4xixx" path="res://shaders/Water2DShader.gdshader" id="6_c2ibq"]
[ext_resource type="Script" uid="uid://bdp50cqdk64qu" path="res://scripts/Boat.gd" id="8_fpfj3"]
[ext_resource type="Script" uid="uid://d11evy7u52jfv" path="res://scripts/FoamParticles2D.gd" id="9_sc1dx"]
[ext_resource type="Script" uid="uid://b3p27cacokd1c" path="res://scripts/GameUI.gd" id="10_wkp8b"]
[ext_resource type="PackedScene" uid="uid://dxya62yd7w035" path="res://StartDock.tscn" id="12_5vvyt"]
[ext_resource type="Texture2D" uid="uid://c23em8ikle2tf" path="res://shaders/WaterTexture1.png" id="12_c2ibq"]
[ext_resource type="Script" uid="uid://dax7x2i74ujgx" path="res://scripts/WaterMesh.gd" id="12_c6i3y"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_5vvyt"]
bounce = 0.05

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_5vvyt"]
size = Vector2(100, 50)

[sub_resource type="CircleShape2D" id="CircleShape2D_5vvyt"]
custom_solver_bias = 0.141
radius = 16.5

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_c6i3y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c2ibq"]
size = Vector2(10, 2160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5vvyt"]
size = Vector2(12800, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c6i3y"]
size = Vector2(12800, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j4qnp"]
size = Vector2(10, 2160)

[sub_resource type="Environment" id="Environment_c2ibq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kjvhd"]
shader = ExtResource("1_03owx")
shader_parameter/top_color = Color(0.1587973, 0.15941676, 0.4573974, 1)
shader_parameter/bottom_color = Color(0.8566423, 0.89277047, 0.9756426, 1)
shader_parameter/sky_scroll_speed = 0.05

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5tuhn"]
shader = ExtResource("3_20pc6")
shader_parameter/speed = 2.0
shader_parameter/amp = 0.1
shader_parameter/color1 = Color(0.05, 0.1, 0.25, 1)
shader_parameter/color2 = Color(0.1, 0.2, 0.4, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mxvw5"]
lifetime_randomness = 0.14
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 34.88
angle_min = -389.1
angle_max = 389.1
flatness = 1.0
initial_velocity_min = 10.0
initial_velocity_max = 40.0
gravity = Vector3(0, 200, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_20pc6"]
shader = ExtResource("6_c2ibq")
shader_parameter/u_bass = 0.0
shader_parameter/u_mids = 0.0
shader_parameter/u_highs = 0.0
shader_parameter/base_color = Color(0.09985284, 0.19966345, 0.60038817, 0.26500002)
shader_parameter/highlight_color = Color(0.599978, 0.7999092, 1.199976, 0.27600002)
shader_parameter/shimmer_strength = 0.15
shader_parameter/water_tex = ExtResource("12_c2ibq")
shader_parameter/tex_scale = Vector2(1, 1)
shader_parameter/tex_scroll_speed = Vector2(0.05, 0)
shader_parameter/glow_base = 0.8
shader_parameter/glow_music_boost = 2.0
shader_parameter/normal_distort_base = 0.4
shader_parameter/mids_normal_boost = 1.0
shader_parameter/highs_normal_boost = 1.5
shader_parameter/specular_strength = 0.7
shader_parameter/specular_sharpness = 16.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5vvyt"]
shader = ExtResource("6_c2ibq")
shader_parameter/u_bass = 0.8970000426075
shader_parameter/u_mids = 0.526000024985
shader_parameter/u_highs = 0.4830000229425
shader_parameter/base_color = Color(0.1, 0.2, 0.6, 1)
shader_parameter/highlight_color = Color(0.6, 0.8, 1.2, 1)
shader_parameter/shimmer_strength = 0.06999999843536
shader_parameter/water_tex = ExtResource("12_c2ibq")
shader_parameter/tex_scale = Vector2(1, 1)
shader_parameter/tex_scroll_speed = Vector2(0.05, 0)
shader_parameter/glow_base = 0.8
shader_parameter/glow_music_boost = 2.0
shader_parameter/normal_distort_base = 0.27999999374144
shader_parameter/mids_normal_boost = 1.0
shader_parameter/highs_normal_boost = 1.5
shader_parameter/specular_strength = 0.01999999955296
shader_parameter/specular_sharpness = 64.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fpfj3"]
size = Vector2(49, 114)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sc1dx"]
size = Vector2(904, 420)

[node name="MainRoot" type="Node2D"]

[node name="WaveController" type="Node2D" parent="."]
script = ExtResource("1_c2ibq")
visual_vertical_scale = 2.0
visual_water_line_y = 175.0
water_line_y = 175.0
base_amp = 30.0
base_freq = 0.01
base_speed = 0.5
chop_amp = 0.1
chop_freq = 0.1
chop_speed = 1.0
intro_build_duration = 10.0
max_wave_scale = 5.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_j4qnp")

[node name="Boat" type="RigidBody2D" parent="."]
light_mask = 2
position = Vector2(640, 340)
mass = 25.0
physics_material_override = SubResource("PhysicsMaterial_5vvyt")
inertia = 1.0
lock_rotation = true
linear_velocity = Vector2(5, 5)
linear_damp_mode = 1
angular_velocity = 0.034906585
constant_force = Vector2(0, 1)
constant_torque = 1.0
script = ExtResource("8_fpfj3")
water_drag = 0.8

[node name="BoatSprite" type="Sprite2D" parent="Boat"]
position = Vector2(0, -10)
texture = SubResource("PlaceholderTexture2D_5vvyt")

[node name="Camera2D" type="Camera2D" parent="Boat" node_paths=PackedStringArray("boat", "dock_reference")]
z_index = 5
position = Vector2(50, -114)
offset = Vector2(0, 50)
position_smoothing_enabled = true
position_smoothing_speed = 2.0
rotation_smoothing_enabled = true
rotation_smoothing_speed = 50.0
script = ExtResource("3_c6i3y")
boat = NodePath("..")
dock_reference = NodePath("../../Dock")
zoom_near = Vector2(1.25, 1.25)
zoom_far = Vector2(0.4, 0.8)
zoom_start_distance = 100.0
zoom_full_distance = 2000.0
near_offset = Vector2(50, -250)
far_offset = Vector2(900, -300)

[node name="Boat" type="CollisionShape2D" parent="Boat"]
position = Vector2(0, -18)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_5vvyt")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(95, -63)
disable_mode = 1
physics_material_override = SubResource("PhysicsMaterial_c6i3y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -360)
shape = SubResource("RectangleShape2D_c2ibq")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(6400, 720)
shape = SubResource("RectangleShape2D_5vvyt")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(6400, -1440)
shape = SubResource("RectangleShape2D_c6i3y")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(12800, -360)
shape = SubResource("RectangleShape2D_j4qnp")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_c2ibq")

[node name="EnvironmentManager" type="Node2D" parent="WorldEnvironment"]
visible = false

[node name="WaterChain" type="Node2D" parent="." node_paths=PackedStringArray("wave_controller", "boat")]
visibility_layer = 2
z_index = 5
position = Vector2(640, 360)
script = ExtResource("1_5vvyt")
segment_width = 1280.0
point_count = 640
buoy_radius = 2.0
wave_controller = NodePath("../WaveController")
boat = NodePath("../Boat")
buoy_spring_strength = 500.0
buoy_damping = 20.0
joint_stiffness = 3.0
joint_damping = 5.0

[node name="SkyParallax" type="Parallax2D" parent="."]
z_index = -3
scroll_scale = Vector2(0.2, 0.1)
scroll_offset = Vector2(2529, -1096)
repeat_times = 10

[node name="Sky" type="Sprite2D" parent="SkyParallax"]
material = SubResource("ShaderMaterial_kjvhd")
position = Vector2(1560, 640)
scale = Vector2(8, 3)
texture = ExtResource("2_wkp8b")

[node name="BackWavesParallax" type="Parallax2D" parent="."]
z_index = -1
scroll_scale = Vector2(0.4, 0.2)
scroll_offset = Vector2(759, 635)

[node name="BackWaves" type="Sprite2D" parent="BackWavesParallax"]
material = SubResource("ShaderMaterial_5tuhn")
position = Vector2(3745, 85)
scale = Vector2(8, 1)
texture = ExtResource("2_wkp8b")

[node name="UI" type="CanvasLayer" parent="." node_paths=PackedStringArray("music_player", "wave_controller")]
offset = Vector2(200, 120)
transform = Transform2D(1, 0, 0, 1, 200, 120)
script = ExtResource("10_wkp8b")
music_player = NodePath("../AudioStreamPlayer")
wave_controller = NodePath("../WaveController")

[node name="Panel" type="Control" parent="UI"]
modulate = Color(0.8548469, 0.92947316, 1, 0.5)
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_top = -5.0
offset_right = 363.0
offset_bottom = 255.0

[node name="ChooseTrackCont" type="HBoxContainer" parent="UI/Panel"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 0
offset_left = 405.0
offset_top = -6.0
offset_right = 755.0
offset_bottom = 25.0
alignment = 1

[node name="ChooseTrackButton" type="Button" parent="UI/Panel/ChooseTrackCont"]
layout_mode = 2
size_flags_horizontal = 2
text = "Choose track..."

[node name="TrackNameLabel" type="Label" parent="UI/Panel/ChooseTrackCont"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 12
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="UI/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel/MarginContainer"]
layout_mode = 2

[node name="WaveAmpRow" type="HBoxContainer" parent="UI/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="WaveAmpRow" type="Label" parent="UI/Panel/MarginContainer/VBoxContainer/WaveAmpRow"]
layout_mode = 2
text = "Wave Amp"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaveAmpSlider" type="HSlider" parent="UI/Panel/MarginContainer/VBoxContainer/WaveAmpRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
max_value = 150.0
rounded = true

[node name="BassBoostRow" type="HBoxContainer" parent="UI/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BassBoostRow" type="Label" parent="UI/Panel/MarginContainer/VBoxContainer/BassBoostRow"]
layout_mode = 2
text = "Bass Boost"

[node name="BassBoostSlider" type="HSlider" parent="UI/Panel/MarginContainer/VBoxContainer/BassBoostRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
max_value = 5.0
step = 0.25

[node name="ChopAmpRow" type="HBoxContainer" parent="UI/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ChopAmpRow" type="Label" parent="UI/Panel/MarginContainer/VBoxContainer/ChopAmpRow"]
layout_mode = 2
text = "Amp Chop "

[node name="ChopAmpSlider" type="HSlider" parent="UI/Panel/MarginContainer/VBoxContainer/ChopAmpRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
max_value = 80.0

[node name="FollowRow" type="HBoxContainer" parent="UI/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Follow" type="Label" parent="UI/Panel/MarginContainer/VBoxContainer/FollowRow"]
layout_mode = 2
text = "Follow        "

[node name="FollowSlider" type="HSlider" parent="UI/Panel/MarginContainer/VBoxContainer/FollowRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
max_value = 20.0

[node name="DampingRow" type="HBoxContainer" parent="UI/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Damping" type="Label" parent="UI/Panel/MarginContainer/VBoxContainer/DampingRow"]
layout_mode = 2
text = "Damping"

[node name="DampingSlider" type="HSlider" parent="UI/Panel/MarginContainer/VBoxContainer/DampingRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
max_value = 10.0
step = 0.5

[node name="MenuButton" type="MenuButton" parent="UI/Panel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Mode"

[node name="FileDialog" type="FileDialog" parent="UI"]
oversampling_override = 1.0
title = "Open a File"
initial_position = 2
file_mode = 0
display_mode = 1

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(697, 142)
rotation = -2.773943
skew = 0.02094376
emitting = false
amount = 32
preprocess = 0.5
randomness = 1.0
collision_base_size = 12.48
trail_enabled = true
trail_lifetime = 0.1
trail_section_subdivisions = 8
process_material = SubResource("ParticleProcessMaterial_mxvw5")
script = ExtResource("9_sc1dx")

[node name="WaterMesh2" type="Polygon2D" parent="." node_paths=PackedStringArray("water_chain")]
z_index = 1
material = SubResource("ShaderMaterial_20pc6")
texture = ExtResource("12_c2ibq")
script = ExtResource("12_c6i3y")
water_chain = NodePath("../WaterChain")
bottom_y = 1500.0
extra_margin = 0.0

[node name="WaterMesh" type="Polygon2D" parent="." node_paths=PackedStringArray("water_chain")]
material = SubResource("ShaderMaterial_5vvyt")
color = Color(1, 1, 1, 0)
texture = ExtResource("12_c2ibq")
script = ExtResource("12_c6i3y")
water_chain = NodePath("../WaterChain")
bottom_y = 1000.0
extra_margin = 0.0

[node name="Dock" parent="." instance=ExtResource("12_5vvyt")]
position = Vector2(442, 108)
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(388, 322)
shape = SubResource("RectangleShape2D_fpfj3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(442, 200)
shape = SubResource("RectangleShape2D_sc1dx")
disabled = true

[node name="WaterMesh3" type="Polygon2D" parent="." node_paths=PackedStringArray("water_chain")]
z_index = 1
material = SubResource("ShaderMaterial_20pc6")
offset = Vector2(1280, 0)
texture = ExtResource("12_c2ibq")
script = ExtResource("12_c6i3y")
water_chain = NodePath("../WaterChain")
bottom_y = 1500.0
extra_margin = 0.0

[node name="WaterMesh4" type="Polygon2D" parent="." node_paths=PackedStringArray("water_chain")]
z_index = 1
material = SubResource("ShaderMaterial_20pc6")
texture = ExtResource("12_c2ibq")
script = ExtResource("12_c6i3y")
water_chain = NodePath("../WaveController")
bottom_y = 1500.0

[connection signal="pressed" from="UI/Panel/ChooseTrackCont/ChooseTrackButton" to="UI" method="_on_choose_track_button_pressed"]
